src/objects/MYBZ_System__c.object
<CustomObject>
    <fields>
        <fullName>Aligned_Districts__c</fullName>
        <label>Aligned Districts</label>
        <picklist>
            <picklistValues>
                <fullName>CA IHS DISTRICT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA IHS DISTRICT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN IHS DISTRICT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA IHS DISTRICT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAC WEST IHS DISTRICT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UT IHS DISTRICT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WI IHS DISTRICT</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Aligned_Territories__c</fullName>
        <label>Aligned Territories</label>
        <picklist>
            <picklistValues>
                <fullName>WASHINGTON IHS AM 125506</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAYSTATE MA IH Partner 125397</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAYSTATE MA IH Specialist 125376</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMC MA IH Partner 125396</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMC MA IH Specialist 125375</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAREGROUP MA IH Partner 125395</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAREGROUP MA IH Specialist 125373</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INDEPENDENT MA IH Partner 125398</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OREGON IHS AM 126069</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PARTNERS MA IH Partner 125394</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PARTNERS MA IH Specialist 125372</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PORTLAND OR IHS AM 125505</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEATTLE IHS AM 126070</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOUTH MA IH Specialist 125374</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STEWARD MA IHS Specialist 125414</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UMASS MA IH Specialist 125377</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Global_IDs__c</fullName>
        <label>Global ID&apos;s</label>
        <picklist>
            <picklistValues>
                <fullName>18785</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19515</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19536</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19907</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40466</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>114017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>116447</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>119895</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>120518</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>123621</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>129520</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>130531</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>131795</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>132780</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>133282</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2003821</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020294</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2023818</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2030993</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2033776</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2036330</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2061419</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2090842</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2096075</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2099861</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>System_ID__c</fullName>
        <externalId>true</externalId>
        <label>System ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
</CustomObject>